chore: remove unused code